# cc-codex-bridge

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: cc-bridge-pr-check.yml  cc-codex-bridge-pr-check.yml  claude-code-review.yml  claude-code.yml  claude.yml  cli-refresh.yml  codeql.yml
docs/platform-snapshots/claude_code/: registry.npmjs.org__anthropic-ai_claude-code_latest
docs/platform-snapshots/codex/: developers.openai.com_codex_concepts_sandboxing  developers.openai.com_codex_config-reference  developers.openai.com_codex_guides_agents-md  developers.openai.com_codex_hooks  developers.openai.com_codex_skills
docs/specs/: 2026-04-22-cc-bridge-design.md  platform-feature-mapping.md
docs/superpowers/plans/: 2026-04-24-terminal-loop-onboarding-gif.md
docs/superpowers/specs/: 2026-04-23-cc-bridge-node20-migration-design.md  2026-04-24-terminal-loop-onboarding-gif-design.md
media/onboarding-video/: README.md  package.json
media/onboarding-video/src/: OnboardingVideo.tsx  Root.tsx  script.ts
plugins/cc-bridge/: CLAUDE.md  package.json  pyproject.toml  tsconfig.build.json  tsconfig.json
plugins/cc-codex-bridge/: CLAUDE.md  package.json
scripts/: bridge.py  refresh_cli_docs.py
scripts/adapters/: codex.py
scripts/mappings/: hooks.yaml
scripts/readers/: agents.py  env.py  hooks.py
skills/diff/: SKILL.md
skills/status/: SKILL.md
skills/sync/: SKILL.md
tasks/: lessons.md
tests/: test_bridge.py
tests/adapters/: test_codex.py
tests/readers/: test_context.py
(+84 files in other folders)
