[project]
name = "cc-bridge"
version = "0.1.0"
description = "Bridge Claude Code configuration to Codex CLI and Gemini CLI"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-tmp-files>=0.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
